tests/golden/snapshots/render_program_matrix__scaffold_program_with_custom_program_id.snap
---
source: tests/golden/render_program_matrix.rs
expression: corpus(tmp.path())
---
=== programs/swap/Cargo.toml ===
[package]
name = "swap"
version = "0.1.0"
description = "Anchor program for MyDapp"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "swap"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
=== programs/swap/Xargo.toml ===
[target.bpfel-unknown-unknown.dependencies.std]
features = []
=== programs/swap/src/instructions/mod.rs ===
//! Instruction module registry for `swap`.
//!
//! The `segment=instructions` block below is managed by
//! `sunscreen scaffold instruction` — edits inside the markers will be
//! overwritten. Code outside the markers is preserved across re-runs.

// === sunscreen:auto-generated:begin segment=instructions version=1 generator=instruction ===
// === sunscreen:auto-generated:end segment=instructions ===
=== programs/swap/src/lib.rs ===
//! `swap` — Anchor program scaffolded by `sunscreen scaffold program`.
//!
//! The `segment=*` blocks below are managed by the `sunscreen scaffold`
//! family of commands. Edits inside the markers will be overwritten on the
//! next scaffold run; code outside the markers is preserved.

use anchor_lang::prelude::*;

pub mod instructions;
#[allow(unused_imports)]
use instructions::*;

declare_id!("Sw4pNotReal11111111111111111111111111111111");

#[program]
pub mod swap {
    use super::*;

    // === sunscreen:auto-generated:begin segment=dispatch version=1 generator=dispatch ===
    // === sunscreen:auto-generated:end segment=dispatch ===
}
